docs/versioned_docs/version-0.21.0/integration-patterns/managed-syncs.mdx
import ThemedImage from '@theme/ThemedImage';
import BrowserWindow from '@site/src/components/BrowserWindow';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Managed Syncs

Managed Syncs allows you to configure Supaglue to sync data from your customers' third-party providers into a destination database hosted in either your cloud, or Supaglue's cloud.

It's the fastest way to read data into your application and allows you to offload third-party provider authentication, APIs, rate limits, retries, and more to Supaglue.

<ThemedImage
  alt="integration patterns syncs"
  width="65%"
  sources={{
    light: '/img/integration-patterns-syncs.png',
    dark: '/img/integration-patterns-syncs.png',
  }}
/>

## How it works

1. Use the [Management Portal](https://app.supaglue.io) to create a sync configuration ([SyncConfig](#syncconfig)) that defines "what" and "how" to sync from a third-party [Provider](#provider) to a [Destination](#destination).
2. Your customer connects via our [Managed Authentication](../platform/managed-auth) feature.
3. Supaglue starts fetching data from your customers’ third-party Providers and landing them in a Destination database (e.g. Postgres), that you can then query from your application.

## Core concepts

<ThemedImage
  alt="managed syncs concepts"
  width="50%"
  sources={{
    light: '/img/managed-syncs-concepts.png',
    dark: '/img/managed-syncs-concepts.png',
  }}
/>

### Provider

A Provider is a third-party SaaS tool that Supaglue can connect to, to sync data.

Use the **Connectors -> Providers** page in the Management Portal to configure your provider. For providers who support OAuth-based authentication, you'll be asked to provide your OAuth app credentials.

<Tabs>

<TabItem value="provider-mgmt-ui" label="Management Portal" default>

<BrowserWindow url="https://app.supaglue.io/application/62605dc1-148e-4c53-a850-82e10f71ed23/connectors/providers/crm/salesforce">

<ThemedImage
  alt="provider config"
  width="100%"
  sources={{
    light: '/img/salesforce-provider-config.png',
    dark: '/img/salesforce-provider-config.png',
  }}
/>

</BrowserWindow>

</TabItem>

<TabItem value="provider-json" label="JSON" default>

```json
{
  "id": "...",
  "application_id": "...",
  "category": "crm",
  "auth_type": "oauth2",
  "name": "salesforce",
  "config": {
    "oauth": {
      "oauth_scopes": ["id", "api", "refresh_token"],
      "credentials": {
        "oauth_client_id": "3MVG9ux34Ig8G5epaZ61C6cIBMigzByvA_dRqIK173k80emeb13bs.bjU1IxUt8AOAKrZHcymU770sHlopQG_",
        "oauth_client_secret": "EE04112033912B1B62A3BE1DAD7D01903C7256A611A636008AD68434B421CD3C"
      }
    }
  }
}
```

</TabItem>

</Tabs>

### Destination

A Destination is a database that Supaglue syncs third-party provider data to. You can choose one in your [infrastructure](#option-1-your-database) or [Supaglue's infrastructure](#option-2-supaglue-hosted-database--data-listing-api).

Use the **Connectors --> Destinations** page in the Management Portal to set your destination credentials:

<Tabs>

<TabItem value="destination-mgmt-ui" label="Management Portal" default>

<BrowserWindow url="https://app.supaglue.io/application/62605dc1-148e-4c53-a850-82e10f71ed23/connectors/destinations/postgres">

<ThemedImage
  alt="destination config"
  width="100%"
  sources={{
    light: '/img/postgres-destination-config.png',
    dark: '/img/postgres-destination-config.png',
  }}
/>

</BrowserWindow>

</TabItem>

<TabItem value="destination-json" label="JSON">

```json
{
  "id": "...",
  "application_id": "...",
  "name": "My Postgres Destination",
  "type": "postgres",
  "config": {
    "host": "production.cluster-cdhnnutnlctj.us-west-2.rds.amazonaws.com",
    "port": 5432,
    "database": "postgres_prod_db",
    "schema": "public",
    "user": "myuser"
  }
}
```

</TabItem>

</Tabs>

:::info
Before syncing data, Supaglue generates the destination tables and columns in your database if they do not already exist.

See [data models](../platform/common-schemas/overview) for more detail on destination schemas.
:::

### SyncConfig

A SyncConfig ties a Provider (source) to a Destination. It defines what objects to sync and how to sync them (frequency, strategy, etc).

<Tabs>

<TabItem value="sync-config-mgmt-ui" label="Management Portal" default>

<BrowserWindow url="https://app.supaglue.io/application/62605dc1-148e-4c53-a850-82e10f71ed23/syncs/sync_configs/4427eb3f-3c64-4d1e-bf3a-0646475fc71c">

<ThemedImage
  alt="sync config"
  width="100%"
  sources={{
    light: '/img/salesforce-postgres-sync-config.png',
    dark: '/img/salesforce-postgres-sync-config.png',
  }}
/>

</BrowserWindow>

</TabItem>

<TabItem value="sync-config-json" label="JSON">

```json
{
  "id": "...",
  "application_id": "...",
  "provider_id": "7f72ec07-e5c1-47fd-8cf5-e71dd13873af",
  "destination_id": "6e7baa88-84dd-4dbc-902a-14522c2984eb",
  "config": {
    "default_config": {
      "period_ms": 60000,
      "strategy": "full then incremental",
      "auto_start_on_connection": true
    },
    "standard_objects": [
      {
        "object": "Account"
      }
    ],
    "custom_objects": [
      {
        "object": "Car__c"
      }
    ]
  }
}
```

The SyncConfig above defines references a Salesforce Provider config and a Postgres Destination config that does the following:

- Sync `Account` [standard object](../platform/objects/overview) from Salesforce.
- Sync the `Car__c` [custom object](../platform/objects/overview) from Salesforce.

</TabItem>

</Tabs>

### Sync strategies

Supaglue offers two sync strategies that you can configure in your sync configuration:

- `full only`: Every sync fetches all records from the Provider.
- `full then incremental`: The initial sync performs a full sync, then incremental after using a persistent high watermark.
   - `full_sync_every_n_incrementals`: Setting this configuration allows you to perform incremental syncs and a full refresh after every n incremental syncs. This strategy is helpful to ensure the eventual consistency of records deleted on the provider side that some incremental syncs do not support.

`full then incremental` is used where we can, but for specific objects and Providers, we may only be able to offer `full only` sync strategies. We list these in the [Providers](/category/providers) documentation.

## Query patterns

### Direct query

The quickest way to query data is to query the raw JSONB data that Supaglue lands: this is well-suited if you can easily do transforms upon reading the raw data in your application using code. You may optionally add indexes to help query performance.

### Logical SQL view

You can create Postgres views if you need to rename fields or run transformations easily expressed using SQL.

### Postgres Generated Columns

Building on Pattern 2, if your SQL transformations are expensive to run at query time, you can use Postgres [Generated Columns](https://www.postgresql.org/docs/current/ddl-generated-columns.html) to speed up queries by pushing the transformation work to be maintained at write time.

### Transformation pipeline

If you have well-structured tables that you wish to write Supaglue-synced data into, you can paginate over the Supaglue-synced tables, run your transformations, and write the transformed data into your tables.

<ThemedImage
  alt="transformation pipeline"
  width="75%"
  sources={{
    light: '/img/transformation-pipeline.png',
    dark: '/img/transformation-pipeline.png',
  }}
/>

Read more about transformation pipelines and patterns in our [transformation tutorial section](../tutorials/transformations/overview).

## Destination options

You can decide where to host the database that Supaglue syncs to:

1. **Self-host your database**: Supaglue writes raw data directly into your database.
1. **Use a Supaglue-hosted database + [API](../api/v2/data/data-listing-api)**: Supaglue writes to a Supaglue-hosted database and provides an API to paginate, transform, and write data into your database schema.

### Option 1: Your database

Supaglue writes raw data directly into your database.

<ThemedImage
  alt="managed syncs"
  width="65%"
  sources={{
    light: '/img/managed-syncs.png',
    dark: '/img/managed-syncs.png',
  }}
/>

### Option 2: Supaglue-hosted database + [Data Listing API](../api/v2/data/data-listing-api)

Supaglue writes raw data into a Supaglue-hosted database and provides a [convenient API](../api/v2/data/data-listing-api) to paginate over records, which is helpful if you don't have an existing transformation pipeline.

<ThemedImage
  alt="data listing api"
  width="65%"
  sources={{
    light: '/img/data-listing-api.png',
    dark: '/img/data-listing-api.png',
  }}
/>

### Choosing between the destination options

There are several differences between the two methods of hosting Destinations:

| Dimension                   | Your application database                                     | Supaglue-hosted database + Data Listing API                 |
| --------------------------- | ------------------------------------------------------------- | ----------------------------------------------------------- |
| Transformations             | Ideal if you have existing transformation pipelines           | Ideal if you don't have an existing transformation pipeline |
| Compliance (data residency) | Your customer data is never stored in Supaglue at-rest        | Your customer data is stored in Supaglue at-rest            |
| Security                    | Your database needs to be accessible from the public internet | Your final target database can be behind a VPC              |
| Operational                 | You need to ensure your database is up                        | Supaglue will ensure the uptime and sync reliability        |
| Performance/Load            | Supaglue determines how fast to sync to your database         | You want to control how fast to sync to your database       |
